	* doc/m2m.txt: Move to doc/C/README.m2m
	* doc/ja_JP.ujis/README.m2m: Add
	* doc/Makefile.{am,in}, doc/C/Makefile.{am,in},
	  doc/ja_JP.ujis/Makefile.{am,in}: Fix to fit with change above
	* script/Makefile.{am,in}, script/lspatch.pl: Fix a little

2004-02-28  Saito <saito@intaa.net>

	* interface/w32g_i.c, interface/w32g.h:
	  Fix about Win32 GUI.
	* interface/w32g_icon.ico:
	  Fix large icon.

2004-02-27  Takashi Iwai <tiwai@suse.de>

	* interface/Makefile.am, interface/interface_[Ak].txt:
	  Added the missing text files for interface A and k.

2004-02-26  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5: Update
	* script/lspatch.pl: Fix to fit with new patch options
	* timidity/instrum.c: Fix a little

2004-02-26  Saito <saito2@digitalme.com>

	* timidity/instrum.[ch], timidity/timidity.c, timidity/playmidi.[ch],
	  timidity/readmidi.c, timidity/mix.c:
	  Rename #extension redamper to #extension damper.
	  Add some patch options.

2004-02-25  Saito <saito2@digitalme.com>

	* timidity/w32g_vorbis_dll.c, timidity/vorbis_a.c, timidity/recache.c:
	  Fix.

2004-02-24  Saito <saito2@digitalme.com>

	* interface/w32g_syn.c, interface/w32g_i.c:
	  Improve bahaviour around taskbar.

2004-02-24  mput <root@mput.dip.jp>

	* configure.in: avoid warning

2004-02-24  Henrique de Moraes Holschuh <hmh@debian.org>

	* interface/Makefile.am (install.dynamics): The Dynamic interfaces
	  need the .txt files installed too.
	* doc/C/timidity.cfg.5: Fix English expressions
	* common.makefile.in (ELISP_DIR): Bug fix

2004-02-24  mput <root@mput.dip.jp>

	* configure.in: ALSA 1.0 support for alsaseq interface, thanks to
	  <hmh@debian.org>

2004-02-23  Saito <saito2@digitalme.com>

	* interface/w32g_res.{h,rc}, interface/w32g_i.c,
	  interface/w32g_subwin.c, interface/w32g_pref.c,
	  interface/w32g_icon.ico:
	  Change and add some items.

2004-02-22  Saito <saito2@digitalme.com>

	* timidity/reverb.c, timidity/playmidi.c: