@@ -6152,7 +6152,7 @@ void recompute_delay_status_gs(void)
 	}
 
 	if(p->pre_lpf) {
-		p->lpf.a = (double)(7 - p->pre_lpf) / 7.0 * 0.9 + 0.05;
+		p->lpf.a = 2.0 * ((double)(7 - p->pre_lpf) / 7.0f * 16000.0f + 200.0f) / play_mode->rate;
 		init_filter_lowpass1(&(p->lpf));
 	}
 }
@@ -6193,7 +6193,7 @@ void recompute_reverb_status_gs(void)
 	struct reverb_status_t *p = &reverb_status;
 
 	if(p->pre_lpf) {
-		p->lpf.a = (double)(7 - p->pre_lpf)/ 7.0 * 0.9 + 0.05;
+		p->lpf.a = 2.0 * ((double)(7 - p->pre_lpf) / 7.0f * 16000.0f + 200.0f) / play_mode->rate;
 		init_filter_lowpass1(&(p->lpf));
 	}
 }
@@ -6265,7 +6265,7 @@ void recompute_chorus_status_gs()
 	struct chorus_status_t *p = &chorus_status;
 
 	if(p->pre_lpf) {
-		p->lpf.a = (double)(7 - p->pre_lpf) / 7.0 * 0.9 + 0.05;
+		p->lpf.a = 2.0 * ((double)(7 - p->pre_lpf) / 7.0f * 16000.0f + 200.0f) / play_mode->rate;
 		init_filter_lowpass1(&(p->lpf));
 	}
 }
@@ -6652,97 +6652,19 @@ void set_insertion_effect_def_gs(void)
 	}
 }
 
-/*! convert GS insertion effect parameters for internal 2-Band EQ. */
-static void *conv_gsie_to_eq2(struct insertion_effect_gs *ieffect, EffectList *ef)
+/*! recompute GS insertion effect parameters. */
+void recompute_insertion_effect_gs(void)
 {
-	InfoEQ2 *eq; 
+	struct insertion_effect_gs *st = &ie_gs;
+	EffectList *efc = st->ef;
 
-	if(ef == NULL) {
-		eq = (InfoEQ2 *)safe_malloc(sizeof(InfoEQ2));
-		memset(eq, 0, sizeof(InfoEQ2));
-	} else {
-		eq = (InfoEQ2 *)ef->info;
+	if (st->ef == NULL) {return;}
+	while(efc != NULL && efc->info != NULL)
+	{
+		(*efc->engine->conv_gs)(st, efc);
+		(*efc->engine->do_effect)(NULL, MAGIC_INIT_EFFECT_INFO, efc);
+		efc = efc->next_ef;
 	}
-
-	eq->high_freq = 4000;
-	eq->high_gain = ieffect->parameter[16] - 0x40;
-	eq->low_freq = 400;
-	eq->low_gain = ieffect->parameter[17] - 0x40;
-
-	return eq;
-}
-
-/*! convert GS insertion effect parameters for Overdrive1 / Distortion 1. */
-static void *conv_gsie_to_overdrive1(struct insertion_effect_gs *ieffect, EffectList *ef)
-{
-	InfoOverdrive1 *od;
-	
-	if(ef == NULL) {
-		od = (InfoOverdrive1 *)safe_malloc(sizeof(InfoOverdrive1));
-		memset(od, 0, sizeof(InfoOverdrive1));
-	} else {
-		od = (InfoOverdrive1 *)ef->info;
-	}
-
-	od->level = (double)ieffect->parameter[19] / 127.0;
-	od->drive = ieffect->parameter[0];
-	od->pan = ieffect->parameter[18];
-
-	return od;
-}
-
-/*! convert GS insertion effect parameters for OD1 / OD2. */
-static void *conv_gsie_to_dual_od(struct insertion_effect_gs *ieffect, EffectList *ef)
-{
-	InfoOD1OD2 *od;
-
-	if(ef == NULL) {
-		od = (InfoOD1OD2 *)safe_malloc(sizeof(InfoOD1OD2));
-		memset(od, 0, sizeof(InfoOD1OD2));
-	} else {
-		od = (InfoOD1OD2 *)ef->info;
-	}
-
-	od->level = (double)ieffect->parameter[19] / 127.0;
-	od->levell = (double)ieffect->parameter[16] / 127.0;
-	od->levelr = (double)ieffect->parameter[18] / 127.0;
-	od->drivel = ieffect->parameter[1];
-	od->driver = ieffect->parameter[6];
-	od->panl = ieffect->parameter[15];
-	od->panr = ieffect->parameter[17];
-	od->typel = ieffect->parameter[0];
-	od->typer = ieffect->parameter[5];
-
-	return od;
-}
-
-/*! convert GS insertion effect parameters for Hexa-Chorus. */
-static void *conv_gsie_to_hexa_chorus(struct insertion_effect_gs *ieffect, EffectList *ef)
-{
-	InfoHexaChorus *info;
-	
-	if(ef == NULL) {
-		info = (InfoHexaChorus *)safe_malloc(sizeof(InfoHexaChorus));
-		memset(info, 0, sizeof(InfoHexaChorus));
-	} else {
-		info = (InfoHexaChorus *)ef->info;
-	}
-
-	info->level = (double)ieffect->parameter[19] / 127.0f;
-	info->pdelay = pre_delay_time_table[ieffect->parameter[0]] * (double)play_mode->rate / 1000.0f;
-	info->depth = (double)(ieffect->parameter[2] + 1) / 3.2f  * (double)play_mode->rate / 1000.0f;
-	info->pdelay -= info->depth / 2;
-	if(info->pdelay <= 1) {info->pdelay = 1;}
-	info->lfo0.freq = rate1_table[ieffect->parameter[1]];
-	info->pdelay_dev = ieffect->parameter[3];
-	info->depth_dev = ieffect->parameter[4] - 64;
-	info->pan_dev = ieffect->parameter[5];
-	info->dry = (double)(127 - ieffect->parameter[19]) / 63.0;
-	if(info->dry > 1.0) {info->dry = 1.0;}
-	info->wet = (double)ieffect->parameter[19] / 64.0;
-	if(info->wet > 1.0) {info->wet = 1.0;}
-
-	return info;
 }
 
 /*! re-allocate GS insertion effect parameters. */
@@ -6755,52 +6677,24 @@ void realloc_insertion_effect_gs(void)
 
 	switch(st->type) {
 	case 0x0110: /* Overdrive */
-		st->ef = push_effect(st->ef, EFFECT_EQ2, conv_gsie_to_eq2(st, NULL));
-		st->ef = push_effect(st->ef, EFFECT_OVERDRIVE1, conv_gsie_to_overdrive1(st, NULL));
+		st->ef = push_effect(st->ef, EFFECT_EQ2);
+		st->ef = push_effect(st->ef, EFFECT_OVERDRIVE1);
 		break;
 	case 0x0111: /* Distortion */
-		st->ef = push_effect(st->ef, EFFECT_EQ2, conv_gsie_to_eq2(st, NULL));
-		st->ef = push_effect(st->ef, EFFECT_DISTORTION1, conv_gsie_to_overdrive1(st, NULL));
+		st->ef = push_effect(st->ef, EFFECT_EQ2);
+		st->ef = push_effect(st->ef, EFFECT_DISTORTION1);
 		break;
 	case 0x0140: /* Hexa-Chorus */
-		st->ef = push_effect(st->ef, EFFECT_EQ2, conv_gsie_to_eq2(st, NULL));
-		st->ef = push_effect(st->ef, EFFECT_HEXA_CHORUS, conv_gsie_to_hexa_chorus(st, NULL));
+		st->ef = push_effect(st->ef, EFFECT_EQ2);
+		st->ef = push_effect(st->ef, EFFECT_HEXA_CHORUS);
 		break;
 	case 0x1103: /* OD1 / OD2 */
-		st->ef = push_effect(st->ef, EFFECT_OD1OD2, conv_gsie_to_dual_od(st, NULL));
+		st->ef = push_effect(st->ef, EFFECT_OD1OD2);
 		break;
 	default: break;
 	}
-}
 
-/*! recompute GS insertion effect parameters. */
-void recompute_insertion_effect_gs(void)
-{
-	struct insertion_effect_gs *st = &ie_gs;
-	EffectList *efc = st->ef;
-
-	if(st->ef == NULL) {return;}
-	while(efc != NULL && efc->do_effect != NULL)
-	{
-		switch(efc->type) {
-		case EFFECT_EQ2:
-			efc->info = conv_gsie_to_eq2(st, efc);
-			break;
-		case EFFECT_OVERDRIVE1:
-		case EFFECT_DISTORTION1:
-			efc->info = conv_gsie_to_overdrive1(st, efc);
-			break;
-		case EFFECT_HEXA_CHORUS:
-			efc->info = conv_gsie_to_hexa_chorus(st, efc);
-			break;
-		case EFFECT_OD1OD2:
-			efc->info = conv_gsie_to_dual_od(st, efc);
-			break;
-		default: break;
-		}
-		(*efc->do_effect)(NULL, MAGIC_INIT_EFFECT_INFO, efc);
-		efc = efc->next_ef;
-	}
+	recompute_insertion_effect_gs();
 }
 
 /*! initialize channel layers. */
